// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WeatherCard should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    conditions="Mostly Cloudy"
    currentTime="Last Updated on February 20, 10:06 AM MST"
    icon="http://icons.wxug.com/i/c/k/mostlycloudy.gif"
    location="Capitol Hill, Denver"
    temp={11.8}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Loading Weather Data...",
      "className": "weather-card",
    },
    "ref": null,
    "rendered": "Loading Weather Data...",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Loading Weather Data...",
        "className": "weather-card",
      },
      "ref": null,
      "rendered": "Loading Weather Data...",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`WeatherCard should match the snapshot 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    hour="12:00 PM"
    icon="http://icons.wxug.com/i/c/k/cloudy.gif"
    pop="15"
    temp="15"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": "Loading Weather Data...",
      "className": "weather-card",
    },
    "ref": null,
    "rendered": "Loading Weather Data...",
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "Loading Weather Data...",
        "className": "weather-card",
      },
      "ref": null,
      "rendered": "Loading Weather Data...",
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
